# cryptol-rust-client

./: Cargo.toml  Dockerfile  LICENSE  README.md  test.py
.github/workflows/: clippy-test.yml  doc-test.yml  docker.yml  main.yml  rust-test.yml  rustfmt-test.yml
examples/: sha384.rs
src/: lib.rs
tests/: tests.rs
