[package]
name = "cryptol_client"
version = "0.1.1"
edition = "2021"
license = "BSD-3-Clause"
description = "`cryptol_client` is a collection of utilities for connecting to and interacting with a running `cryptol-remote-api` instance."
repository = "https://github.com/weaversa/cryptol-rust-client"

[lib]
name = "cryptol_client"
path = "src/lib.rs"

[[example]]
name = "sha384"

[dependencies]
jsonrpsee = { version = "0.16.2", features = ["jsonrpsee-core", "jsonrpsee-http-client"] }
serde = "1.0.152"
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["full"] }

